add about-us page + responsive/add contact page + responsive/add filter search(imcomplete) + ressponsive for product page/responsive homepage/validate signup

--- a/src/app/components/client/footer/footer.component.html
+++ b/src/app/components/client/footer/footer.component.html
@@ -1,6 +1,6 @@
 <footer class="w-full text-gray-600 bg-gray-100 py-7">
   <div
-    class="grid md:grid-cols-3 md:gap-4 max-w-[1440px] m-auto justify-around"
+    class="lg:px-0 px-3 grid lg:grid-cols-3 grid-cols-1 lg:gap-4 max-w-[1440px] m-auto justify-around"
   >
     <div class="col-span-1">
       <p class="text-sm font-medium">
