--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -12,3 +12,9 @@
     /* color: white; */
     border: none;
 }
+
+@media only screen and (max-width: 576px) {
+    body {
+        padding: 0 8px;
+    }
+}
