--- a/src/app/components/client/collections/collections.component.html
+++ b/src/app/components/client/collections/collections.component.html
@@ -1,5 +1,5 @@
 <section id="collection">
-  <div class="grid grid-cols-3 gap-3">
+  <div class="grid lg:grid-cols-3 lg:gap-3 sm:grid-cols-1 sm:gap-2">
     <div class="relative">
       <img
         class=""
@@ -11,7 +11,9 @@
           NZ41 - BIKER DENIM - LIGHT BLUE V2
         </p>
         <h3 class="uppercase text-white my-4 font-semibold text-2xl">BOLD</h3>
-        <button class="text-white bg-black py-2 px-8 text-xs">
+        <button
+          class="text-white lg:block bg-black py-2 px-8 text-xs sm:hidden"
+        >
           XEM CHI TIẾT
         </button>
       </div>
