--- a/src/app/components/client/contact-about-us/contact-about-us.component.html
+++ b/src/app/components/client/contact-about-us/contact-about-us.component.html
@@ -1,5 +1,5 @@
 <section class="bg-[#F5F5F5]">
-  <div class="grid grid-cols-2 max-w-[1580px] w-full m-auto">
+  <div class="grid lg:grid-cols-2 lg:max-w-[1580px] grid-cols-1 w-full m-auto">
     <div class="grid-cols-1 relative bg-black">
       <div class="opacity-70 object-cover w-full max-h-[420px] overflow-hidden">
         <img
@@ -53,12 +53,12 @@
     </div>
   </div>
   <div class="flex max-w-[1440px] m-auto py-6 px-5">
-    <div class="w-full flex justify-center items-center">
-      <div class="w-[15%]">
+    <div class="w-full lg:flex lg:justify-center flex-none lg:items-center">
+      <div class="lg:w-[15%] w-full my-3 lg:my-0">
         <i class="fa-solid fa-envelope-open-text"></i>
         <span class="text-sm px-4">Đăng ký nhận thư</span>
       </div>
-      <div class="w-[40%]">
+      <div class="lg:w-[40%] w-full my-3 lg:my-0">
         <form class="flex w-full">
           <input
             type="text"
