--- a/src/app/components/client/products-famous/products-famous.component.html
+++ b/src/app/components/client/products-famous/products-famous.component.html
@@ -1,6 +1,6 @@
 <section class="container py-8 mx-auto">
   <h2 class="font-bold text-3xl my-6 text-center">Sản phẩm nổi bật</h2>
-  <div class="grid grid-cols-5 gap-8">
+  <div class="grid lg:grid-cols-4 lg:gap-8 grid-cols-2 gap-4">
     <div
       *ngFor="let item of products"
       class="bg-white dark:bg-gray-800 dark:border-gray-700 m-auto"
