--- a/src/app/pages/client/policy/policy.component.html
+++ b/src/app/pages/client/policy/policy.component.html
@@ -1,6 +1,6 @@
 <section>
-  <div class="max-w-[1440px] m-auto flex gap-3 py-4 px-10">
-    <div class="w-[30%] px-5">
+  <div class="max-w-[1440px] m-auto sm:flex gap-3 py-4 sm:px-10 px-2">
+    <div class="sm:w-[30%] sm:px-5">
       <div class="border border-gray-200 p-4 px-6 text-sm font-semibold">
         <h3 class="text-center font-bold text-lg">DANH MỤC TRANG</h3>
         <div class="min-w-full h-[2px] bg-black opacity-80 my-3"></div>
@@ -29,9 +29,9 @@
         />
       </div>
     </div>
-    <div class="w-[70%] px-5">
+    <div class="sm:w-[70%] sm:px-5 px-2">
       <div>
-        <h1 class="font-bold text-3xl my-3">Điều khoản dịch vụ</h1>
+        <h1 class="font-bold sm:text-3xl text-xl my-3">Điều khoản dịch vụ</h1>
         <div class="text-sm">
           <div>
             <h5 class="font-bold my-3 underline">1. Giới thiệu</h5>
@@ -87,7 +87,7 @@
         </div>
       </div>
       <div>
-        <h1 class="font-bold text-3xl my-3">Chính sách đổi trả</h1>
+        <h1 class="font-bold sm:text-3xl text-xl my-3">Chính sách đổi trả</h1>
         <div class="text-sm">
           <div>
             <h5 class="font-bold my-3 underline">1. Điều kiện áp dụng</h5>
