--- a/src/app/components/client/footer/footer.component.html
+++ b/src/app/components/client/footer/footer.component.html
@@ -1,12 +1,14 @@
 <footer class="w-full text-gray-600 bg-gray-100 py-7">
-  <div class="max-w-[1440px] m-auto grid grid-cols-4 gap-4 pb-4">
+  <div
+    class="max-w-[1440px] m-auto grid sm:grid-cols-4 sm:gap-4 pb-4 max-sm:px-2.5"
+  >
     <div>
-      <h4 class="font-medium text-lg mb-2">Giới thiệu</h4>
+      <h4 class="font-medium text-lg sm:mb-2 max-sm:my-1">Giới thiệu</h4>
       <p>
         FSTORE ra đời để tạo ra một quy chuẩn mới về chất lượng và sự phù hợp để
         nâng tầm streetwear Việt Nam
       </p>
-      <div class="py-4">
+      <div class="sm:py-4">
         <img
           src="https://file.hstatic.net/1000300454/file/logo_bct_019590229b4c4dfda690236b67f7aff4.png"
           alt=""
@@ -15,7 +17,7 @@
       </div>
     </div>
     <div>
-      <h4 class="font-medium text-lg mb-2">Liên kết</h4>
+      <h4 class="font-medium text-lg sm:mb-2 max-sm:my-1">Liên kết</h4>
       <div><a routerLink="">Tìm kiếm</a></div>
       <div>
         <a routerLink="">Giới thiệu</a>
@@ -28,7 +30,7 @@
       </div>
     </div>
     <div>
-      <h4 class="font-medium text-lg mb-2">Thông tin liên hệ</h4>
+      <h4 class="font-medium text-lg sm:mb-2 max-sm:my-1">Thông tin liên hệ</h4>
       <div>
         <div>
           <i class="fa-solid fa-location-dot w-6"></i
@@ -49,7 +51,7 @@
       </div>
     </div>
     <div>
-      <h4 class="font-medium text-lg mb-2">Địa chỉ chúng tôi</h4>
+      <h4 class="font-medium text-lg sm:mb-2 max-sm:my-1">Địa chỉ chúng tôi</h4>
       <iframe
         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3723.863856015896!2d105.74421217591062!3d21.038132787455297!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x313454b991d80fd5%3A0x53cefc99d6b0bf6f!2zVHLGsOG7nW5nIENhbyDEkeG6s25nIEZQVCBQb2x5dGVjaG5pYw!5e0!3m2!1svi!2s!4v1684576948202!5m2!1svi!2s"
         width="100%"
