responsive fix/add admin user interface/toggle cart on header

--- a/src/app/components/client/cart/cart.component.html
+++ b/src/app/components/client/cart/cart.component.html
@@ -1,4 +1,4 @@
-<div class="w-[450px] mx-auto border">
+<div class="lg:w-[450px] md:w-full mx-auto border">
   <div class="m-5">
     <p class="text-center bg-[#F3F5F6] py-2">Giỏ hàng</p>
   </div>
