--- a/src/app/pages/admin/user-admin/user-admin.component.html
+++ b/src/app/pages/admin/user-admin/user-admin.component.html
@@ -1,1 +1,146 @@
-<p>user-admin works!</p>
+<section class="container mx-auto">
+  <div class="relative overflow-x-auto">
+    <div class="flex justify-between my-8">
+      <button class="bg-blue-500 text-white px-8 py-3">Thêm người dùng</button>
+
+      <input
+        class="focus:outline-none border border-black w-[200px] pl-2"
+        placeholder="Tìm kiếm "
+        type="text"
+      />
+    </div>
+    <table class="w-full text-sm text-left text-gray-500 dark:text-gray-400">
+      <thead
+        class="text-xs text-gray-700 uppercase bg-gray-50 dark:bg-gray-700 dark:text-gray-400"
+      >
+        <tr>
+          <th scope="col" class="px-6 py-3">Email</th>
+          <th scope="col" class="px-6 py-3">Tên khách hàng</th>
+          <th scope="col" class="px-6 py-3">Địa chỉ</th>
+          <th scope="col" class="px-6 py-3">Danh sách đơn hàng</th>
+          <th scope="col" class="px-6 py-3">Thao tác</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr class="bg-white border-b dark:bg-gray-800 dark:border-gray-700">
+          <th
+            scope="row"
+            class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white"
+          >
+            duclqmph28383@fpt.edu.vn
+          </th>
+          <td class="px-6 py-4">Lê Quang Minh Đức</td>
+          <td class="px-6 py-4">Lê Quang Đạo</td>
+          <td class="px-6 py-4">
+            <button class="px-2 py-1 bg-black text-white">Xem</button>
+          </td>
+          <td class="px-6 py-4">
+            <button class="px-2 py-1 bg-red-500 text-white">
+              Vô hiệu tài khoản
+            </button>
+          </td>
+        </tr>
+        <tr class="bg-white border-b dark:bg-gray-800 dark:border-gray-700">
+          <th
+            scope="row"
+            class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white"
+          >
+            thaivhph28695@fpt.edu.vn
+          </th>
+          <td class="px-6 py-4">Vũ Hồng Thái</td>
+          <td class="px-6 py-4">Linh Đàm</td>
+          <td class="px-6 py-4">
+            <button class="px-2 py-1 bg-black text-white">Xem</button>
+          </td>
+          <td class="px-6 py-4">
+            <button class="px-2 py-1 bg-red-500 text-white">
+              Vô hiệu tài khoản
+            </button>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+  <div class="text-center w-full mt-10" aria-label="Page navigation example">
+    <ul class="inline-flex items-center -space-x-px">
+      <li>
+        <a
+          href="#"
+          class="block px-3 py-2 ml-0 leading-tight text-gray-500 bg-white border border-gray-300 rounded-l-lg hover:bg-gray-100 hover:text-gray-700 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white"
+        >
+          <span class="sr-only">Previous</span>
+          <svg
+            aria-hidden="true"
+            class="w-5 h-5"
+            fill="currentColor"
+            viewBox="0 0 20 20"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <path
+              fill-rule="evenodd"
+              d="M12.707 5.293a1 1 0 010 1.414L9.414 10l3.293 3.293a1 1 0 01-1.414 1.414l-4-4a1 1 0 010-1.414l4-4a1 1 0 011.414 0z"
+              clip-rule="evenodd"
+            ></path>
+          </svg>
+        </a>
+      </li>
+      <li>
+        <a
+          href="#"
+          class="px-3 py-2 leading-tight text-gray-500 bg-white border border-gray-300 hover:bg-gray-100 hover:text-gray-700 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white"
+          >1</a
+        >
+      </li>
+      <li>
+        <a
+          href="#"
+          class="px-3 py-2 leading-tight text-gray-500 bg-white border border-gray-300 hover:bg-gray-100 hover:text-gray-700 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white"
+          >2</a
+        >
+      </li>
+      <li>
+        <a
+          href="#"
+          aria-current="page"
+          class="z-10 px-3 py-2 leading-tight text-white border bg-black dark:border-gray-700 dark:bg-gray-700 dark:text-white"
+          >3</a
+        >
+      </li>
+      <li>
+        <a
+          href="#"
+          class="px-3 py-2 leading-tight text-gray-500 bg-white border border-gray-300 hover:bg-gray-100 hover:text-gray-700 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white"
+          >4</a
+        >
+      </li>
+      <li>
+        <a
+          href="#"
+          class="px-3 py-2 leading-tight text-gray-500 bg-white border border-gray-300 hover:bg-gray-100 hover:text-gray-700 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white"
+          >5</a
+        >
+      </li>
+      <li>
+        <a
+          href="#"
+          class="block px-3 py-2 leading-tight text-gray-500 bg-white border border-gray-300 rounded-r-lg hover:bg-gray-100 hover:text-gray-700 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white"
+        >
+          <span class="sr-only">Next</span>
+          <svg
+            aria-hidden="true"
+            class="w-5 h-5"
+            fill="currentColor"
+            viewBox="0 0 20 20"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <path
+              fill-rule="evenodd"
+              d="M7.293 14.707a1 1 0 010-1.414L10.586 10 7.293 6.707a1 1 0 011.414-1.414l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414 0z"
+              clip-rule="evenodd"
+            ></path>
+          </svg>
+        </a>
+      </li>
+    </ul>
+  </div>
+</section>
