--- a/src/app/pages/client/product/list-product/list-product.component.css
+++ b/src/app/pages/client/product/list-product/list-product.component.css
@@ -1,3 +1,18 @@
 .addtocart {
-    display: none;
+    opacity: -1;
+    transition: all .4s;
+
+}
+
+.addtocart-hover:hover>div>i {
+    opacity: 1;
+
+}
+
+/* .addtocart-hover:hover>a>img {
+    filter: brightness(90%);
+} */
+
+.addtocart-hover>a>img {
+    transition: all 0.2s ease-in-out;
 }
