--- a/src/app/pages/admin/product-admin/product-admin.component.html
+++ b/src/app/pages/admin/product-admin/product-admin.component.html
@@ -1,1 +1,11 @@
-<p>product-admin works!</p>
+<h1 class="font-bold text-xl">Quản lý sản phẩm</h1>
+<section>
+  <a routerLink="/admin/products/add">
+    <button
+      class="py-2 px-3 bg-blue-600 text-white rounded-md hover:bg-blue-500"
+    >
+      Thêm sản phẩm
+    </button>
+  </a>
+</section>
+<app-list-product-admin></app-list-product-admin>
