--- a/src/app/pages/client/about-us/about-us.component.html
+++ b/src/app/pages/client/about-us/about-us.component.html
@@ -16,7 +16,7 @@
       </div>
       <div>
         <img
-          src="https://file.hstatic.net/200000307615/file/fnoss1938_0f61b151de724b0789da9cf0ec0cd02c.jpg"
+          src="https://file.hstatic.net/200000307615/file/FSTOREs1938_0f61b151de724b0789da9cf0ec0cd02c.jpg"
           alt=""
         />
       </div>
@@ -28,8 +28,8 @@
       </h4>
       <br />
       <p>
-        Với trọng trách như “đứa con đầu lòng”, FNOS muốn hiện thực hóa hoài bão
-        của người sáng lập: Tạo dựng một thương hiệu thời trang kiến tạo quy
+        Với trọng trách như “đứa con đầu lòng”, FSTORE muốn hiện thực hóa hoài
+        bão của người sáng lập: Tạo dựng một thương hiệu thời trang kiến tạo quy
         chuẩn mới về chất lượng và sự phù hợp để nâng tầm streetwear Việt Nam.
         Vì đơn giản rằng, người Việt chúng ta xứng đáng sở hữu những sản phẩm
         chất lượng quốc tế với mức giá hợp lý, đặc biệt trong bối cảnh nước ta
@@ -40,7 +40,7 @@
       </p>
       <img
         class="mx-auto my-8"
-        src="https://file.hstatic.net/200000307615/file/z3489088865623_738462b4ead3d09d9a0eb0e900f3a83b_04dcfcbd694e44dd83ae2f00ed2c4c5a_grande.jpg"
+        src="../../../../assets/images/banner fstore.png"
         alt=""
       />
     </div>
