themme manager product + category + dashboard

--- a/src/app/pages/admin/category/admin-list-category/admin-list-category.component.html
+++ b/src/app/pages/admin/category/admin-list-category/admin-list-category.component.html
@@ -183,14 +183,10 @@
       >
         <tr>
           <th scope="col" class="px-6 py-3">STT</th>
-          <th scope="col" class="px-6 py-3">Tên sản phẩm</th>
+          <th scope="col" class="px-6 py-3">Tên danh mục</th>
           <th scope="col" class="px-6 py-3">Hình ảnh</th>
-          <th scope="col" class="px-6 py-3">Giá</th>
-          <th scope="col" class="px-6 py-3">Kích thước</th>
-          <th scope="col" class="px-6 py-3">Số lượng</th>
           <th scope="col" class="px-6 py-3">Trạng thái</th>
-          <th scope="col" class="px-6 py-3">Danh mục</th>
-          <th scope="col" class="px-6 py-3">Action</th>
+          <th scope="col" class="px-6 py-3">Tuỳ chọn</th>
         </tr>
       </thead>
       <tbody>
@@ -202,8 +198,7 @@
             scope="row"
             class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white overflow-hidden max-w-[150px]"
           >
-            Apple iMac 27" Lorem ipsum dolor sit, amet consectetur adipisicing
-            elit. Voluptatem, mollitia. Dolor, corrupti.
+            Áo phông
           </th>
           <td class="px-6 py-4">
             <img
@@ -212,14 +207,10 @@
               class="w-14 h-14 object-cover"
             />
           </td>
-          <td class="px-6 py-4 text-red-500">$300.000</td>
-          <td class="px-6 py-4">M - L - XL - SX</td>
-          <td class="px-6 py-4">999</td>
           <td class="px-6 py-4">Hiển thị</td>
-          <td class="px-6 py-4 max-w-[70px] overflow-hidden">Quần jeans</td>
           <td class="px-6 py-4">
             <a
-              routerLink="#"
+              routerLink="/admin/category/11/update"
               class="font-medium text-blue-600 dark:text-blue-500 hover:underline mr-3"
               >Chỉnh sửa</a
             >
@@ -238,8 +229,7 @@
             scope="row"
             class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white overflow-hidden max-w-[150px]"
           >
-            Apple iMac 27" Lorem ipsum dolor sit, amet consectetur adipisicing
-            elit. Voluptatem, mollitia. Dolor, corrupti.
+            Áo phông
           </th>
           <td class="px-6 py-4">
             <img
@@ -248,55 +238,15 @@
               class="w-14 h-14 object-cover"
             />
           </td>
-          <td class="px-6 py-4 text-red-500">$300.000</td>
-          <td class="px-6 py-4">M - L - XL - SX</td>
-          <td class="px-6 py-4">999</td>
           <td class="px-6 py-4">Hiển thị</td>
-          <td class="px-6 py-4 max-w-[70px] overflow-hidden">Quần jeans</td>
           <td class="px-6 py-4">
             <a
-              routerLink="#"
+              routerLink="/admin/category/11/update"
               class="font-medium text-blue-600 dark:text-blue-500 hover:underline mr-3"
               >Chỉnh sửa</a
             >
             <a
               routerLink="#"
-              class="font-medium px-2 py-1 bg-red-600 text-red-100 dark:text-blue-500 hover:underline ml-3"
-              >Xoá</a
-            >
-          </td>
-        </tr>
-        <tr
-          class="bg-white dark:bg-gray-800 hover:bg-gray-50 dark:hover:bg-gray-600"
-        >
-          <td class="w-4 p-4 text-center font-semibold">1</td>
-          <th
-            scope="row"
-            class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white overflow-hidden max-w-[150px]"
-          >
-            Apple iMac 27" Lorem ipsum dolor sit, amet consectetur adipisicing
-            elit. Voluptatem, mollitia. Dolor, corrupti.
-          </th>
-          <td class="px-6 py-4">
-            <img
-              src="https://encrypted-tbn1.gstatic.com/shopping?q=tbn:ANd9GcQQMJk4DAlP-OFJ6Bi9pYMuGUvUx6xCdtWpTOtA3n0oiXCUdYZ6I-QvPrZosSzvFoGgedllptAMWs2ukCqbKQXVsdVSWn1hH9XeJyO2mOW7&usqp=CAE"
-              alt=""
-              class="w-14 h-14 object-cover"
-            />
-          </td>
-          <td class="px-6 py-4 text-red-500">$300.000</td>
-          <td class="px-6 py-4">M - L - XL - SX</td>
-          <td class="px-6 py-4">999</td>
-          <td class="px-6 py-4">Hiển thị</td>
-          <td class="px-6 py-4 max-w-[70px] overflow-hidden">Quần jeans</td>
-          <td class="px-6 py-4">
-            <a
-              routerLink="/admin/products/123/update"
-              class="font-medium text-blue-600 dark:text-blue-500 hover:underline mr-3"
-              >Chỉnh sửa</a
-            >
-            <a
-              routerLink="/admin/products/123/delete"
               class="font-medium px-2 py-1 bg-red-600 text-red-100 dark:text-blue-500 hover:underline ml-3"
               >Xoá</a
             >
