--- a/src/app/components/admin/nav-admin/nav-admin.component.html
+++ b/src/app/components/admin/nav-admin/nav-admin.component.html
@@ -1,4 +1,6 @@
-<section class="min-h-screen bg-[#031737] px-4">
+<section
+  class="min-h-screen @apply bg-[linear-gradient(135deg,#324148_30%,#2d3a41_100%)] px-4"
+>
   <div class="text-white">
     <div class="w-full flex items-center justify-center py-4">
       <a routerLink="/admin/dashboard" class="cursor-pointer">
