--- a/src/app/components/client/search-product/search-product.component.html
+++ b/src/app/components/client/search-product/search-product.component.html
@@ -5,3 +5,8 @@
   [(ngModel)]="enteredSearchValue"
   (input)="onSearchTextChanged()"
 />
+<button
+  class="bg-black text-white py-2 px-4 hover:bg-white hover:text-black hover:border font-medium"
+>
+  Tìm kiếm
+</button>
