--- a/src/app/pages/client/product/list-product/list-product.component.html
+++ b/src/app/pages/client/product/list-product/list-product.component.html
@@ -14,11 +14,11 @@
         <app-search-product
           (searchTextChanged)="onSearchTextEntered($event)"
         ></app-search-product>
-        <button
+        <!-- <button
           class="bg-black text-white py-2 px-4 hover:bg-white hover:text-black hover:border font-medium"
         >
           Tìm kiếm
-        </button>
+        </button> -->
       </div>
 
       <br />
