--- a/src/app/components/client/header/header.component.html
+++ b/src/app/components/client/header/header.component.html
@@ -1,3 +1,34 @@
+<section
+  [ngClass]="
+    notification == 1
+      ? 'fixed left-1/2 top-[50px] z-[1000]'
+      : 'fixed left-1/2 top-[-50px] z-[1000]'
+  "
+  style="transform: translate(-50%, -50%); transition: all 0.35s"
+>
+  <div
+    class="flex p-4 mb-4 text-sm text-red-800 rounded-lg bg-red-50 dark:bg-gray-800 dark:text-red-400"
+    role="alert"
+  >
+    <svg
+      aria-hidden="true"
+      class="flex-shrink-0 inline w-5 h-5 mr-3"
+      fill="currentColor"
+      viewBox="0 0 20 20"
+      xmlns="http://www.w3.org/2000/svg"
+    >
+      <path
+        fill-rule="evenodd"
+        d="M18 10a8 8 0 11-16 0 8 8 0 0116 0zm-7-4a1 1 0 11-2 0 1 1 0 012 0zM9 9a1 1 0 000 2v3a1 1 0 001 1h1a1 1 0 100-2v-3a1 1 0 00-1-1H9z"
+        clip-rule="evenodd"
+      ></path>
+    </svg>
+    <span class="sr-only">Info</span>
+    <div>
+      <span class="font-medium">Đăng xuất thành công !!!</span>
+    </div>
+  </div>
+</section>
 <div class="w-full bg-gray-100 sticky top-0 z-10">
   <header
     class="max-w-[1440px] m-auto grid grid-flow-col justify-between items-center auto-cols-max py-3 px-6 relative"
@@ -62,12 +93,53 @@
         >
           <i class="fas fa-shopping-cart"></i>
         </button>
-        <a
-          routerLink="/auth"
-          class="text-gray-600 hover:text-gray-600 font-medium px-3 py-2"
-        >
-          <i class="fas fa-user"></i>
-        </a>
+        <button class="relative" (click)="checkAccount()">
+          <a
+            *ngIf="isMathGuest == true"
+            routerLink="/auth"
+            class="text-gray-600 hover:text-gray-600 font-medium px-3 py-2"
+          >
+            <i class="fas fa-user"></i>
+          </a>
+          <a
+            *ngIf="isMathGuest == false"
+            class="text-gray-600 hover:text-gray-600 font-medium px-3 py-2"
+          >
+            <i class="fas fa-user"></i>
+          </a>
+          <aside
+            *ngIf="isShowProfile == true"
+            class="absolute w-[180px] h-auto top-[40px] left-[-190%] bg-slate-100 rounded-lg py-3 px-3"
+          >
+            <div class="w-full flex items-center justify-center">
+              <a routerLink="/account">
+                <div class="w-9 h-9 bg-red-500 rounded-full relative">
+                  <span
+                    class="absolute top-[50%] left-[50%] font-bold text-white"
+                    style="transform: translate(-50%, -50%)"
+                    >Đ</span
+                  >
+                </div>
+              </a>
+            </div>
+            <div class="py-1 border-b hover:border-red-200">
+              <a routerLink="/my-bill" class="text-sm font-semibold"
+                >Danh sách đơn hàng</a
+              >
+            </div>
+            <div class="py-1 border-b hover:border-red-200">
+              <a routerLink="/change-password" class="text-sm font-semibold"
+                >Đổi mật khẩu</a
+              >
+            </div>
+            <div
+              class="py-1 border-b hover:border-red-200"
+              (click)="logoutAccount()"
+            >
+              <a class="text-sm font-semibold">Đăng xuất</a>
+            </div>
+          </aside>
+        </button>
         <button
           class="text-gray-600 hover:text-gray-600 font-medium px-3 py-2 hidden max-lg:block"
           (click)="menuMobile($event)"
