--- a/src/app/pages/client/auth/auth.component.html
+++ b/src/app/pages/client/auth/auth.component.html
@@ -1,3 +1,66 @@
+<!-- Alert -->
+<section
+  [ngClass]="
+    notification == 1
+      ? 'fixed left-1/2 top-[50px]'
+      : 'fixed left-1/2 top-[-50px]'
+  "
+  style="transform: translate(-50%, -50%); transition: all 0.35s"
+>
+  <div
+    class="flex p-4 mb-4 text-sm text-green-800 rounded-lg bg-green-50 dark:bg-gray-800 dark:text-green-400"
+    role="alert"
+  >
+    <svg
+      aria-hidden="true"
+      class="flex-shrink-0 inline w-5 h-5 mr-3"
+      fill="currentColor"
+      viewBox="0 0 20 20"
+      xmlns="http://www.w3.org/2000/svg"
+    >
+      <path
+        fill-rule="evenodd"
+        d="M18 10a8 8 0 11-16 0 8 8 0 0116 0zm-7-4a1 1 0 11-2 0 1 1 0 012 0zM9 9a1 1 0 000 2v3a1 1 0 001 1h1a1 1 0 100-2v-3a1 1 0 00-1-1H9z"
+        clip-rule="evenodd"
+      ></path>
+    </svg>
+    <span class="sr-only">Info</span>
+    <div>
+      <span class="font-medium">Đăng nhập thành công!</span>
+    </div>
+  </div>
+</section>
+<section
+  [ngClass]="
+    notification == 2
+      ? 'fixed left-1/2 top-[50px]'
+      : 'fixed left-1/2 top-[-50px]'
+  "
+  style="transform: translate(-50%, -50%); transition: all 0.35s"
+>
+  <div
+    class="flex p-4 mb-4 text-sm text-red-800 rounded-lg bg-red-50 dark:bg-gray-800 dark:text-red-400"
+    role="alert"
+  >
+    <svg
+      aria-hidden="true"
+      class="flex-shrink-0 inline w-5 h-5 mr-3"
+      fill="currentColor"
+      viewBox="0 0 20 20"
+      xmlns="http://www.w3.org/2000/svg"
+    >
+      <path
+        fill-rule="evenodd"
+        d="M18 10a8 8 0 11-16 0 8 8 0 0116 0zm-7-4a1 1 0 11-2 0 1 1 0 012 0zM9 9a1 1 0 000 2v3a1 1 0 001 1h1a1 1 0 100-2v-3a1 1 0 00-1-1H9z"
+        clip-rule="evenodd"
+      ></path>
+    </svg>
+    <span class="sr-only">Info</span>
+    <div>
+      <span class="font-medium">Kiểm tra lại email hoặc mật khẩu !!!</span>
+    </div>
+  </div>
+</section>
 <section>
   <div
     class="grid md:grid-cols-2 gap-1 md:max-w-[1280px] m-auto min-h-[90vh] md:py-[5%] md:px-[7%] justify-center items-center max-md:px-1"
@@ -103,58 +166,6 @@
           Đăng nhập
         </button>
       </form>
-      <!-- <form *ngIf="isMatch == false" (ngSubmit)="onSignin()">
-        <div class="mb-6">
-          <label
-            for="email"
-            class="block mb-2 text-sm font-medium text-gray-900 dark:text-white"
-            >Email</label
-          >
-          <input
-            [(ngModel)]="user.email"
-            name="email"
-            type="email"
-            id="email"
-            placeholder="Email của bạn"
-            class="shadow-sm bg-gray-50 border border-gray-300 text-gray-900 text-sm focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500 dark:shadow-sm-light"
-          />
-          <p class="text-red-600 text-[14px]">Email không tồn tại</p>
-        </div>
-        <div class="mb-6">
-          <label
-            for="password"
-            class="block mb-2 text-sm font-medium text-gray-900 dark:text-white"
-            >Mật khẩu</label
-          >
-          <input
-            [(ngModel)]="user.password"
-            name="password"
-            type="password"
-            id="password"
-            placeholder="*********"
-            class="shadow-sm bg-gray-50 border border-gray-300 text-gray-900 text-sm focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500 dark:shadow-sm-light"
-          />
-          <p class="text-red-600 text-[14px]">Mật khẩu không chính xác</p>
-        </div>
-        <div class="mb-6 flex justify-between">
-          <div>
-            <input
-              type="checkbox"
-              name="save_signin"
-              [(ngModel)]="user.save_signin"
-              id="save"
-            />
-            <label for="save" class="pl-2 cursor-pointer">Lưu đăng nhập</label>
-          </div>
-          <a routerLink="/forgot-password">Khôi phục tài khoản</a>
-        </div>
-        <button
-          type="submit"
-          class="text-white w-full bg-black hover:opacity-80 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium text-sm px-5 py-3 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800"
-        >
-          Đăng nhập
-        </button>
-      </form> -->
 
       <form
         *ngIf="isMatch == true"
