--- a/src/app/pages/client/auth/auth.component.html
+++ b/src/app/pages/client/auth/auth.component.html
@@ -383,7 +383,13 @@
         </div>
         <div class="mb-6 flex justify-between">
           <div>
-            <input type="checkbox" name="save" id="policy_terms" />
+            <input
+              type="checkbox"
+              name="save"
+              id="policy_terms"
+              [(ngModel)]="isChecked"
+              [ngModelOptions]="{ standalone: true }"
+            />
             <label for="policy_terms" class="pl-2"
               >Chấp nhận điều khoản chính sách của chúng tôi .</label
             ><a routerLink="/policy-terms" class="font-semibold block"
@@ -392,6 +398,8 @@
           </div>
         </div>
         <button
+          [disabled]="!isChecked"
+          id="submit-signup"
           type="submit"
           class="text-white w-full bg-black hover:opacity-80 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium text-sm px-5 py-3 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800"
         >
