--- a/src/app/layouts/admin-layout/admin-layout.component.html
+++ b/src/app/layouts/admin-layout/admin-layout.component.html
@@ -1,4 +1,4 @@
-<section class="flex">
+<section class="flex" *ngIf="checkPermission == true">
   <div class="w-[14%]">
     <app-nav-admin></app-nav-admin>
   </div>
