--- a/src/app/pages/admin/product-admin/list-product-admin/list-product-admin.component.html
+++ b/src/app/pages/admin/product-admin/list-product-admin/list-product-admin.component.html
@@ -1,3 +1,34 @@
+<section
+  [ngClass]="
+    notificationPro == 1
+      ? 'fixed left-1/2 top-[50px]'
+      : 'fixed left-1/2 top-[-50px]'
+  "
+  style="transform: translate(-50%, -50%); transition: all 0.35s"
+>
+  <div
+    class="flex p-4 mb-4 text-sm text-green-800 rounded-lg bg-green-50 dark:bg-gray-800 dark:text-green-400"
+    role="alert"
+  >
+    <svg
+      aria-hidden="true"
+      class="flex-shrink-0 inline w-5 h-5 mr-3"
+      fill="currentColor"
+      viewBox="0 0 20 20"
+      xmlns="http://www.w3.org/2000/svg"
+    >
+      <path
+        fill-rule="evenodd"
+        d="M18 10a8 8 0 11-16 0 8 8 0 0116 0zm-7-4a1 1 0 11-2 0 1 1 0 012 0zM9 9a1 1 0 000 2v3a1 1 0 001 1h1a1 1 0 100-2v-3a1 1 0 00-1-1H9z"
+        clip-rule="evenodd"
+      ></path>
+    </svg>
+    <span class="sr-only">Info</span>
+    <div>
+      <span class="font-medium">Xoá sản phẩm thành công!</span>
+    </div>
+  </div>
+</section>
 <section class="w-full">
   <div class="relative overflow-x-auto shadow-md sm:rounded-lg">
     <div class="flex items-center justify-between pb-4">
@@ -190,11 +221,64 @@
           <th scope="col" class="px-6 py-3">Số lượng</th>
           <th scope="col" class="px-6 py-3">Trạng thái</th>
           <th scope="col" class="px-6 py-3">Danh mục</th>
+          <th scope="col" class="px-6 py-3">Ngày tạo</th>
           <th scope="col" class="px-6 py-3">Action</th>
         </tr>
       </thead>
       <tbody>
         <tr
+          class="bg-white dark:bg-gray-800 hover:bg-gray-50 dark:hover:bg-gray-600"
+          *ngFor="let item of products; let i = index"
+        >
+          <td class="w-4 p-4 text-center font-semibold">{{ i + 1 }}</td>
+          <th
+            scope="row"
+            class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white overflow-hidden max-w-[150px]"
+          >
+            {{ item.name }}
+          </th>
+          <td class="px-6 py-4">
+            <img
+              src="https://encrypted-tbn1.gstatic.com/shopping?q=tbn:ANd9GcQQMJk4DAlP-OFJ6Bi9pYMuGUvUx6xCdtWpTOtA3n0oiXCUdYZ6I-QvPrZosSzvFoGgedllptAMWs2ukCqbKQXVsdVSWn1hH9XeJyO2mOW7&usqp=CAE"
+              alt=""
+              class="w-14 h-14 object-cover"
+            />
+          </td>
+          <td class="px-6 py-4 text-red-500">{{ formatMoney(item.price) }}</td>
+          <td class="px-6 py-4">
+            <span *ngFor="let i2 of item.size"> {{ i2 }} ,</span>
+          </td>
+          <td class="px-6 py-4">{{ item.quantity }}</td>
+          <td class="px-6 py-4">
+            {{ item.status == true ? "Hiển thị" : "Không hiển thị" }}
+          </td>
+          <td class="px-6 py-4 max-w-[70px] overflow-hidden">
+            {{ item.categoryId }}
+          </td>
+          <td class="px-6 py-4 max-w-[70px] overflow-hidden">
+            {{ item.createdAt }}
+          </td>
+          <td class="px-6 py-4 flex gap-2">
+            <a
+              routerLink="/admin/products/{{ item._id }}/edit"
+              class="font-medium text-blue-600 dark:text-blue-500 hover:underline mr-3"
+              >Chỉnh sửa</a
+            >
+            <button
+              (click)="onHandleRemoveProduct(item._id)"
+              class="font-medium px-2 py-1 bg-red-600 text-red-100 dark:text-blue-500 hover:underline"
+            >
+              Xoá
+            </button>
+            <a
+              routerLink="/products/{{ item._id }}"
+              class="font-medium text-blue-600 dark:text-blue-500 hover:underline mr-3"
+              >Link</a
+            >
+          </td>
+        </tr>
+
+        <!-- <tr
           class="bg-white dark:bg-gray-800 hover:bg-gray-50 dark:hover:bg-gray-600"
         >
           <td class="w-4 p-4 text-center font-semibold">1</td>
@@ -301,7 +385,7 @@
               >Xoá</a
             >
           </td>
-        </tr>
+        </tr> -->
       </tbody>
     </table>
   </div>
