--- a/src/app/pages/client/product/details-product/details-product.component.html
+++ b/src/app/pages/client/product/details-product/details-product.component.html
@@ -30,7 +30,7 @@
         </div>
       </div>
       <img
-        src="https://product.hstatic.net/200000307615/product/7__2__31af12cab2374c02b2df8c3fe98ce9b6_master.jpg"
+        src="{{ product.image }}"
         alt=""
         class="sm:w-[85%] w-[100%] max-sm:py-4"
       />
@@ -49,12 +49,13 @@
       <hr />
       <!-- Price -->
       <h4 class="text-[#FF4040] font-bold text-lg py-2">
-        {{ formatMoney(product.price) }}
+        {{ product.price }} VND
       </h4>
       <hr />
       <form action="" method="post">
         <!-- Size -->
         <h4 class="font-semibold text-xl py-3">Kích thức</h4>
+
         <div
           *ngIf="product.size != undefined || product.size != ''"
           class="flex gap-3"
@@ -203,6 +204,104 @@
             3-5%.
           </li> -->
         </ul>
+      </div>
+    </div>
+  </div>
+  <!--  -->
+  <div class="my-16">
+    <h3 class="text-center font-extrabold text-3xl my-8">Sản phẩm tương tự</h3>
+    <div class="grid lg:grid-cols-4 grid-cols-1 gap-8">
+      <div
+        *ngFor="let item of products"
+        class="relative bg-white dark:bg-gray-800 dark:border-gray-700 m-auto addtocart-hover"
+      >
+        <div>
+          <i
+            class="addtocart absolute text-3xl top-4 right-4 fa-solid fa-cart-plus cursor-pointer text-black"
+          ></i>
+          <a class="w-full">
+            <img class="" src="{{ item.image }}" alt="product image" />
+          </a>
+          <div class="pb-5 my-2">
+            <a href="/product/{{ item._id }}">
+              <h5
+                class="tracking-tight dark:text-white line-clamp-2 hover:text-[#618C2F] uppercase"
+              >
+                {{ item.name }}
+              </h5>
+            </a>
+
+            <div class="flex items-center justify-between">
+              <span class="font-light dark:text-white"
+                >{{ item.price }} <span class="underline">đ</span>
+              </span>
+              <div>
+                <div class="flex items-center mt-2.5 mb-5">
+                  <svg
+                    aria-hidden="true"
+                    class="w-5 h-5 text-yellow-300"
+                    fill="currentColor"
+                    viewBox="0 0 20 20"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <title>First star</title>
+                    <path
+                      d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z"
+                    ></path>
+                  </svg>
+                  <svg
+                    aria-hidden="true"
+                    class="w-5 h-5 text-yellow-300"
+                    fill="currentColor"
+                    viewBox="0 0 20 20"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <title>Second star</title>
+                    <path
+                      d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z"
+                    ></path>
+                  </svg>
+                  <svg
+                    aria-hidden="true"
+                    class="w-5 h-5 text-yellow-300"
+                    fill="currentColor"
+                    viewBox="0 0 20 20"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <title>Third star</title>
+                    <path
+                      d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z"
+                    ></path>
+                  </svg>
+                  <svg
+                    aria-hidden="true"
+                    class="w-5 h-5 text-yellow-300"
+                    fill="currentColor"
+                    viewBox="0 0 20 20"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <title>Fourth star</title>
+                    <path
+                      d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z"
+                    ></path>
+                  </svg>
+                  <svg
+                    aria-hidden="true"
+                    class="w-5 h-5 text-yellow-300"
+                    fill="currentColor"
+                    viewBox="0 0 20 20"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <title>Fifth star</title>
+                    <path
+                      d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z"
+                    ></path>
+                  </svg>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </div>
