--- a/src/app/pages/admin/product-admin/add-product/add-product.component.html
+++ b/src/app/pages/admin/product-admin/add-product/add-product.component.html
@@ -1,7 +1,40 @@
+<section
+  [ngClass]="
+    notificationPro == 1
+      ? 'fixed left-1/2 top-[50px]'
+      : 'fixed left-1/2 top-[-50px]'
+  "
+  style="transform: translate(-50%, -50%); transition: all 0.35s"
+>
+  <div
+    class="flex p-4 mb-4 text-sm text-green-800 rounded-lg bg-green-50 dark:bg-gray-800 dark:text-green-400"
+    role="alert"
+  >
+    <svg
+      aria-hidden="true"
+      class="flex-shrink-0 inline w-5 h-5 mr-3"
+      fill="currentColor"
+      viewBox="0 0 20 20"
+      xmlns="http://www.w3.org/2000/svg"
+    >
+      <path
+        fill-rule="evenodd"
+        d="M18 10a8 8 0 11-16 0 8 8 0 0116 0zm-7-4a1 1 0 11-2 0 1 1 0 012 0zM9 9a1 1 0 000 2v3a1 1 0 001 1h1a1 1 0 100-2v-3a1 1 0 00-1-1H9z"
+        clip-rule="evenodd"
+      ></path>
+    </svg>
+    <span class="sr-only">Info</span>
+    <div>
+      <span class="font-medium">Thêm sản phẩm thành công!</span>
+    </div>
+  </div>
+</section>
 <section class="max-h-[90vh] overflow-x-hidden">
   <div class="mx-auto p-4">
     <h1 class="text-2xl font-bold mb-4">Thêm Sản Phẩm</h1>
     <form
+      [formGroup]="addForm"
+      (ngSubmit)="onSubmit()"
       class="max-w-7xl mx-auto grid grid-cols-2 gap-8 bg-white rounded-lg shadow-md p-6"
     >
       <section class="grid-cols-1">
@@ -12,9 +45,22 @@
           <input
             class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
             id="name"
+            name="name"
             type="text"
+            formControlName="name"
             placeholder="Nhập tên sản phẩm"
           />
+          <div *ngIf="name?.invalid && (name?.dirty || name?.touched)">
+            <div style="color: red" *ngIf="name?.errors?.['required']">
+              <small>{{ noti_er_name[1] }}</small>
+            </div>
+            <div style="color: red" *ngIf="name?.errors?.['minlength']">
+              <small>{{ noti_er_name[2] }}</small>
+            </div>
+            <div style="color: red" *ngIf="name?.errors?.['maxlength']">
+              <small>{{ noti_er_name[3] }}</small>
+            </div>
+          </div>
         </div>
         <div class="mb-4">
           <label
@@ -25,10 +71,15 @@
           <select
             class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
             id="category"
+            formControlName="categoryId"
           >
-            <option value="category1">Danh mục 1</option>
-            <option value="category2">Danh mục 2</option>
-            <option value="category3">Danh mục 3</option>
+            <option
+              *ngFor="let icate of listCategory"
+              value="{{ icate._id }}"
+              [selected]=""
+            >
+              {{ icate.name }}
+            </option>
           </select>
         </div>
         <div class="mb-4">
@@ -38,9 +89,18 @@
           <input
             class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
             id="price"
-            type="text"
+            type="number"
             placeholder="Nhập giá sản phẩm"
+            formControlName="price"
           />
+          <div *ngIf="price?.invalid && (price?.dirty || price?.touched)">
+            <div style="color: red" *ngIf="price?.errors?.['required']">
+              <small>{{ noti_er_price[1] }}</small>
+            </div>
+            <div style="color: red" *ngIf="price?.errors?.['min']">
+              <small>{{ noti_er_price[2] }}</small>
+            </div>
+          </div>
         </div>
         <div class="mb-4"></div>
         <div class="mb-4">
@@ -49,14 +109,25 @@
           >
           <input
             class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
-            id="image"
             type="file"
-            multiple="true"
+            id="image"
+            formControlName="image"
+            accept="image/*"
+            (change)="handleFileInput($event)"
+            multiple
           />
+          <div *ngIf="image?.invalid && (image?.dirty || image?.touched)">
+            <div style="color: red" *ngIf="image?.errors?.['required']">
+              <small>{{ noti_er_image[0] }}</small>
+            </div>
+            <div style="color: red" *ngIf="image?.errors?.['invalidImage']">
+              <small>{{ noti_er_image[1] }}</small>
+            </div>
+          </div>
         </div>
       </section>
       <section class="grid-cols-2">
-        <div class="mb-4">
+        <!-- <div class="mb-4">
           <div>
             <h2
               class="block text-gray-700 text-sm font-bold mb-2 cursor-pointer"
@@ -206,6 +277,30 @@
               </div>
             </div>
           </div>
+        </div> -->
+        <div class="mb-4">
+          <label
+            class="block text-gray-700 text-sm font-bold mb-2"
+            for="quantity"
+            >Số lượng</label
+          >
+          <input
+            class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
+            id="quantity"
+            type="number"
+            placeholder="Nhập số lượng sản phẩm"
+            formControlName="quantity"
+          />
+          <div
+            *ngIf="quantity?.invalid && (quantity?.dirty || quantity?.touched)"
+          >
+            <div style="color: red" *ngIf="quantity?.errors?.['required']">
+              <small>{{ noti_er_quantity[1] }}</small>
+            </div>
+            <div style="color: red" *ngIf="quantity?.errors?.['min']">
+              <small>{{ noti_er_quantity[2] }}</small>
+            </div>
+          </div>
         </div>
         <div class="mb-4">
           <label class="block text-gray-700 text-sm font-bold mb-2" for="status"
@@ -214,9 +309,10 @@
           <select
             class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
             id="status"
+            formControlName="status"
           >
-            <option value="active">Hiển thị</option>
-            <option value="inactive">Không hiển thị</option>
+            <option [selected]="true" value="true">Hiển thị</option>
+            <option value="false">Không hiển thị</option>
           </select>
         </div>
         <div class="mb-4">
@@ -226,6 +322,7 @@
             >Mô Tả</label
           >
           <textarea
+            formControlName="description"
             class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
             id="description"
             placeholder="Nhập mô tả sản phẩm"
@@ -239,6 +336,7 @@
             class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
             id="note"
             placeholder="Nhập lưu ý sản phẩm"
+            formControlName="note"
           ></textarea>
         </div>
       </section>
@@ -254,3 +352,4 @@
     </form>
   </div>
 </section>
+<app-loader [isLoadding]="isLoadding"></app-loader>
