--- a/src/app/pages/client/product/details-product/details-product.component.html
+++ b/src/app/pages/client/product/details-product/details-product.component.html
@@ -1,3 +1,34 @@
+<section
+  [ngClass]="
+    notification == 1
+      ? 'fixed left-1/2 top-[110px]'
+      : 'fixed left-1/2 top-[-50px]'
+  "
+  style="transform: translate(-50%, -50%); transition: all 0.35s"
+>
+  <div
+    class="flex p-4 mb-4 text-sm text-green-800 rounded-lg bg-green-50 dark:bg-gray-800 dark:text-green-400"
+    role="alert"
+  >
+    <svg
+      aria-hidden="true"
+      class="flex-shrink-0 inline w-5 h-5 mr-3"
+      fill="currentColor"
+      viewBox="0 0 20 20"
+      xmlns="http://www.w3.org/2000/svg"
+    >
+      <path
+        fill-rule="evenodd"
+        d="M18 10a8 8 0 11-16 0 8 8 0 0116 0zm-7-4a1 1 0 11-2 0 1 1 0 012 0zM9 9a1 1 0 000 2v3a1 1 0 001 1h1a1 1 0 100-2v-3a1 1 0 00-1-1H9z"
+        clip-rule="evenodd"
+      ></path>
+    </svg>
+    <span class="sr-only">Info</span>
+    <div>
+      <span class="font-medium">Thêm vào giỏ hàng thành công!</span>
+    </div>
+  </div>
+</section>
 <aside class="w-full bg-[#F5F5F5] text-center mt-1">
   <h1 class="font-extrabold sm:text-2xl text-xl sm:py-5 py-3">
     Chi tiết sản phẩm
@@ -49,7 +80,7 @@
       <hr />
       <!-- Price -->
       <h4 class="text-[#FF4040] font-bold text-lg py-2">
-        {{ product.price }} VND
+        {{ formatMoney(product.price) }}
       </h4>
       <hr />
       <form action="" method="post">
@@ -63,7 +94,7 @@
           <div *ngFor="let item of product.size">
             <div
               *ngIf="activeSize !== item"
-              class="relative w-10 h-10 border border-gray-300 cursor-pointer sizeHover z-10"
+              class="relative w-10 h-10 border border-gray-300 cursor-pointer sizeHover z-2"
               data-id="{{ item }}"
               (click)="onHanddleSize($event)"
             >
@@ -77,7 +108,7 @@
             </div>
             <div
               *ngIf="activeSize == item"
-              class="relative w-10 h-10 border border-gray-300 cursor-pointer sizeHover z-10 active"
+              class="relative w-10 h-10 border border-gray-300 cursor-pointer sizeHover z-2 active"
               data-id="{{ item }}"
               (click)="onHanddleSize($event)"
             >
